Ajout du lie de vusaliser l'explication, modif le css

--- a/index.html
+++ b/index.html
@@ -5,77 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide Complet pour Afficher l'Écran Android sur PC Windows</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-        }
-        header, footer {
-            background-color: #0078D7;
-            color: #ffffff;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h1, h2, h3 {
-            color: #0078D7;
-        }
-        h3 {
-            color: #005A9E;
-        }
-        p, ul, ol {
-            color: #333;
-        }
-        pre {
-            background-color: #f4f4f4;
-            padding: 15px;
-            border-radius: 5px;
-            overflow-x: auto;
-        }
-        code {
-            color: #d14;
-            font-family: Consolas, "Courier New", monospace;
-        }
-        .note {
-            background-color: #fffae6;
-            border-left: 6px solid #ffe58f;
-            padding: 15px;
-            margin: 20px 0;
-            border-radius: 5px;
-        }
-        .warning {
-            background-color: #ffe6e6;
-            border-left: 6px solid #ff4d4f;
-            padding: 15px;
-            margin: 20px 0;
-            border-radius: 5px;
-        }
-        ul {
-            list-style-type: disc;
-            margin-left: 40px;
-        }
-        ol {
-            margin-left: 40px;
-        }
-        a {
-            color: #0078D7;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+
 </head>
 <body>
 
 <div class="container">
+    <a href="https://debady.github.io/Controller-telephone-windows-autoris-/">VISUALISER</a>
     <h2>Introduction</h2>
     <p>Ce guide fournit des instructions détaillées pour afficher l'écran de votre téléphone Android sur votre ordinateur Windows. Plusieurs méthodes sont présentées, ainsi que des solutions aux problèmes courants.</p>
 
